force-app/main/default/objects/Book_Rent_Information__c/Book_Rent_Information__c.object-meta.xml
<CustomObject>
    <label>Book Rent Information</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book Rent Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>