force-app/main/default/objects/Book_Rent_Information__c/fields/BookingEndDate__c.field-meta.xml
<CustomField>
    <fullName>BookingEndDate__c</fullName>
    <label>BookingEndDate</label>
    <type>Date</type>
</CustomField>