force-app/main/default/objects/Book_Rent_Information__c/fields/BookingStartDate__c.field-meta.xml
<CustomField>
    <fullName>BookingStartDate__c</fullName>
    <label>BookingStartDate</label>
    <type>Date</type>
</CustomField>