force-app/main/default/objects/Book_Rent_Information__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Book Rent Informations</relationshipLabel>
    <relationshipName>Book_Rent_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>