force-app/main/default/objects/Book_Rent_Information__c/fields/Rent_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Rent_Per_Day__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Rent Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>