force-app/main/default/objects/Book_Rent_Information__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>on-rent</fullName>
            </value>
            <value>
                <fullName>available</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>