force-app/main/default/objects/Book_Rent_Information__c/fields/Total_Hour__c.field-meta.xml
<CustomField>
    <fullName>Total_Hour__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>