force-app/main/default/objects/Book_Rent_Information__c/fields/Total_Rent__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent__c</fullName>
    <formula>Rent_Per_Day__c  *  Total_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>