force-app/main/default/objects/Book_Rent_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>BookingStartDate__c</columns>
    <columns>BookingEndDate__c</columns>
    <columns>Status__c</columns>
    <columns>Rent_Per_Day__c</columns>
    <columns>Total_Days__c</columns>
    <columns>Total_Rent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>